@@ -24,6 +24,8 @@ lintian (2.5.32) UNRELEASED; urgency=medium
     + [BR] Detect package shipping oui or iab ieee database.
     + [NT] Add a check for packages without intermediate
       directories.
+    + [BR] Avoid a false positive in jsom for defaultpresets.xml
+      from openmapstreet.
   * checks/manpages.{desc,pm}:
     + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
       renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)
